--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 .product {
     position: relative;
-    box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
+/*     box-shadow: 0 0 2em rgba(0, 0, 0, 0.2); */
     border-radius: 1em;
     overflow: hidden;
     /* border: 1px solid black; */
